Fixing theme flickering

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,17 +1,20 @@
-body.dark {
-  background-color: #111;
+/* default light */
+html {
+  background: #fff;
+  color: #000;
+}
+
+/* dark mode */
+html.dark {
+  background: #111;
   color: white;
 }
 
-body.dark a {
-  color: #8ab4ff;
-}
-
-body.dark header {
+html.dark header {
   background: #1a1a1a;
 }
 
-body.dark .card {
+html.dark .card {
   background: #222;
   border-color: #444;
 }
